Fixed letter spacing

--- a/functions/public/css/style.css
+++ b/functions/public/css/style.css
@@ -84,7 +84,7 @@
 				top: 5%;
 				width: 60%;
 				padding: 0 20px;
-				letter-spacing: 2px;
+				letter-spacing: 1px;
 			}
 
 			.social {
